[project]
name = "crashcounter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow>=3.0.1",
    "dbt>=1.0.0.40.3",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.4",
    "ruff>=0.11.11",
    "sqlalchemy>=1.4.54",
    "typer>=0.15.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crashcounter"]
